; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/team/extr_team.c___team_option_inst_add_option.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/team/extr_team.c___team_option_inst_add_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.team = type { i32 }
%struct.team_option = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.team*, %struct.team_option*)* @__team_option_inst_add_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__team_option_inst_add_option(%struct.team* %0, %struct.team_option* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.team*, align 8
  %5 = alloca %struct.team_option*, align 8
  %6 = alloca i32, align 4
  store %struct.team* %0, %struct.team** %4, align 8
  store %struct.team_option* %1, %struct.team_option** %5, align 8
  %7 = load %struct.team_option*, %struct.team_option** %5, align 8
  %8 = getelementptr inbounds %struct.team_option, %struct.team_option* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %19, label %11

11:                                               ; preds = %2
  %12 = load %struct.team*, %struct.team** %4, align 8
  %13 = load %struct.team_option*, %struct.team_option** %5, align 8
  %14 = call i32 @__team_option_inst_add(%struct.team* %12, %struct.team_option* %13, i32* null)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  br label %20

18:                                               ; preds = %11
  br label %19

19:                                               ; preds = %18, %2
  store i32 0, i32* %3, align 4
  br label %25

20:                                               ; preds = %17
  %21 = load %struct.team*, %struct.team** %4, align 8
  %22 = load %struct.team_option*, %struct.team_option** %5, align 8
  %23 = call i32 @__team_option_inst_del_option(%struct.team* %21, %struct.team_option* %22)
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %20, %19
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @__team_option_inst_add(%struct.team*, %struct.team_option*, i32*) #1

declare dso_local i32 @__team_option_inst_del_option(%struct.team*, %struct.team_option*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
